[tool.poetry]
name = "us-hexbin"
version = "0.1.0"
description = ""
authors = ["EChebelyon <kipedie@gmail.com>"]
readme = "README.md"
packages = [{include = "us_hexbin"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
jupyter = "^1.0.0"
geopandas = "^0.12.2"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
jupyterlab = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
